# learning_boids

./: CMakeLists.txt  README.md
src/: Fish.cpp  Fish.hpp  Main.cpp  Utils.cpp  Utils.hpp
src/AI_Engine/: Analyzer.cpp  Analyzer.hpp  Engine.cpp  Engine.hpp  GraphsCreation.cpp  GraphsCreation.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  Specie.cpp  Specie.hpp  Synapse.hpp
src/boids/: Boid.cpp  Boid.hpp  Entity.hpp  QuadTree.cpp  QuadTree.hpp  commons.cpp  commons.hpp
src/moteur_ia/: Analyseur.cpp  Analyseur.hpp  Couche.cpp  Couche.hpp  Espece.cpp  Espece.hpp  Neurone.cpp  Neurone.hpp  ReseauNeurones.cpp  ReseauNeurones.hpp  Synapse.cpp  Synapse.hpp  creationGraphes.cpp  creationGraphes.hpp  moteur.cpp  moteur.hpp
